--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           map: {
             "jQuery": "node_modules/jquery/dist/jquery.min.js"
           },
-          baseURL: '/',
+          baseURL: '/hangman/',
           packages: {
             '/': {
               defaultExtension: 'js'
