--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The hangman beckons</title>
     <link rel="stylesheet" type="text/css" href="page.css">
-    <!-- <script src="node_modules/systemjs/dist/system.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.20.17/system.js"></script>
+    <script src="node_modules/systemjs/dist/system.js"></script>
 </head>
 <body>
     <div class="topmatter">
